Add controller to generate API docs

--- a/pet-store/build.gradle
+++ b/pet-store/build.gradle
@@ -22,16 +22,19 @@ micronaut {
 }
 
 dependencies {
-    compileOnly("io.micronaut.data:micronaut-data-processor")
     compileOnly("io.micronaut.openapi:micronaut-openapi")
+    implementation("io.swagger.core.v3:swagger-annotations")
+
+    compileOnly("io.micronaut.data:micronaut-data-processor")
     implementation("io.micronaut:micronaut-validation")
     implementation("io.micronaut.groovy:micronaut-runtime-groovy")
     implementation("io.micronaut:micronaut-http-client")
-    implementation("io.swagger.core.v3:swagger-annotations")
     implementation("io.micronaut.sql:micronaut-jdbc-tomcat")
     implementation("io.micronaut.data:micronaut-data-hibernate-jpa")
     runtimeOnly("ch.qos.logback:logback-classic")
     runtimeOnly("com.h2database:h2")
+
+    compile project(':animal-kingdom')
 }
 
 mainClassName = "mn.multi.Application"
