--- a/pet-store/build.gradle
+++ b/pet-store/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     runtimeOnly("ch.qos.logback:logback-classic")
     runtimeOnly("com.h2database:h2")
 
+    implementation("io.micronaut.groovy:micronaut-runtime-groovy")
+
     compile project(':animal-kingdom')
 }
 
